k8s/full/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jekylldeployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jekyllpreview
  template:
    metadata:
#      annotations:
#        prometheus.io/scrape: 'true'
#        prometheus.io/path: /metrics
#        prometheus.io/port: '8080'
    spec:
      containers:
#      - name: deploy-jekyll
#        image: registry.dev.clarkezone.dev/jekyllbuilder:arm
#        command: ['sh', '-c', "--"]
#        args: ["cd source;bundle install;bundle exec jekyll build -d //site JEKYLL_ENV=production;while true; do sleep 30000; done;"]
#        volumeMounts:
#          - mountPath: /src
#            name: blogsource
#            readOnly: true
#          - mountPath: /site
#            name: blogrender
      - name: blog-serve
        image: nginx:1.20-alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          #subPath: "site/html"
          name: blogrender
          readOnly: true
      - name: previewd-server
        image: registry.hub.docker.com/clarkezone/previewd:0.0.1.8
        #image: registry.dev.clarkezone.dev/previewd:0.0.1.7
        command: ['sh', '-c', "--"]
        args: ["./JekyllBlogPreview -initialbuild=true -incluster=true"]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          #subPath: "site/html"
          name: blogrender
          readOnly: true
      volumes:
        - name: blogsource
          persistentVolumeClaim:
            claimName: blogsource-pvc
        - name: blogrender
          persistentVolumeClaim:
            claimName: blogrender-pvc
