k8s/full/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-serve
  name: nginx-serve-service
spec:
  selector:
    app: nginx-serve
  ports:
    - name: listener
      port: 80
