k8s/full/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogpreview
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - blogpreview.dev.clarkezone.dev
    secretName: blogpreview-tls
  rules:
  - host: blogpreview.dev.clarkezone.dev
    http:
      paths:
      - backend:
          service:
            name: "nginx-serve-service"
            port: 
              number: 80
        path: /
        pathType: Prefix
